--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,11 @@
- 
+ .gif {
+  height: 200px;
+  width: 200px;
+  padding: 10px;
+  margin: 20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+  border-radius: 25px;
+  background-color: #fdcc52
+ }
