updated images with still and animate attributes; and updated how i attach to gif section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,5 +7,6 @@
   border-color: white;
   border-width: 1px;
   border-radius: 25px;
-  background-color: #fdcc52
+  /*background-color: #fdcc52;*/
+  background-color: grey;
  }
